Closed
Bug 1179122
Opened 10 years ago
Closed 10 years ago
[e10s] TextComposition should manage target in parent process even when its child process has focus
Categories
(Core :: DOM: UI Events & Focus Handling, defect)
Core
DOM: UI Events & Focus Handling
Tracking
()
RESOLVED
FIXED
mozilla42
People
(Reporter: masayuki, Assigned: masayuki)
References
Details
(Keywords: inputmethod)
Attachments
(1 file)
15.52 KB,
patch
|
smaug
:
review+
|
Details | Diff | Splinter Review |
Currently, EventStateManager sends composition events to TabParent. Therefore, TextComposition is now created only in the process which has composition actually.
But this causes a lot of bugs which are detected by |Assertion failure: aCompositionEvent->message == (2200)| since if TabParent becomes deactive during a composition, WidgetCompositionEvent is dispatched to different content in the parent.
For preventing this issue, TextComposition should guarantee that all composition events are sent to same TabParent.
Assignee | ||
Comment 1•10 years ago
|
||
See comment 0 for the detail. Although, even with this patch, I sometimes see hitting the assertion. Sigh... (Of course, this actually fixes some cases of that, though.)
Attachment #8628577 -
Flags: review?(bugs)
Updated•10 years ago
|
Attachment #8628577 -
Flags: review?(bugs) → review+
Updated•10 years ago
|
tracking-e10s:
--- → +
Comment 3•10 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla42
Updated•6 years ago
|
Component: Event Handling → User events and focus handling
You need to log in
before you can comment on or make changes to this bug.
Description
•