Bug 1179122 TextComposition should manage a composition which is even in a child process r=smaug